--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.7.2",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "core-js": "^3.8.3",
     "seamless-scroll-polyfill": "^2.3.4",
     "uuid": "^11.0.5",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
+    "vue-template-compiler": "^2.6.14",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.84.0",
-    "sass-loader": "^10.5.2",
-    "vue-template-compiler": "^2.6.14"
+    "sass-loader": "^10.5.2"
   },
   "browserslist": [
     "> 1%",
