--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "core-js": "^3.8.3",
+    "debounce": "^2.2.0",
     "json-server": "^1.0.0-beta.3",
     "seamless-scroll-polyfill": "^2.3.4",
     "uuid": "^11.0.5",
